--- a/application/pom.xml
+++ b/application/pom.xml
@@ -10,6 +10,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <dependencies>
+        <dependency>
+            <groupId>example.org.hexagonal</groupId>
+            <artifactId>domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>example.org.hexagonal</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <artifactId>application</artifactId>
